--- a/web/bower.json
+++ b/web/bower.json
@@ -4,7 +4,7 @@
   "main": "index.html",
   "dependencies": {
     "jquery": "~2.0.1",
-    "pathjs": "*",
+    "pathjs": "git@github.com:olivM/pathjs.git",
     "console-js": "*"
   },
   "ignore": [
