--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-clean": "latest",
     "grunt-img": "latest",
     "grunt-bower": "latest",
-    "bower": "latest"
+    "bower": "latest",
+    "grunt-contrib-compass": "~0.2.0"
   }
 }
