--- a/web/bower.json
+++ b/web/bower.json
@@ -14,6 +14,7 @@
     "jquery-placeholder": "git://github.com/mathiasbynens/jquery-placeholder.git",
     "jcarousellite": "git://github.com/olivM/jCarouselLite.git",
     "jquery-ui-touchpunch": "git://github.com/olivM/jQuery-UI-TouchPunch.git",
+    "threejs": "git://github.com/mrdoob/three.js.git",
     "modernizr": "git://github.com/Modernizr/Modernizr.git"
   },
   "ignore": [
